# ck3-db

./: Cargo.toml  README.md
migrations/2023-05-26-071306_create_character/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
