[package]
name = "ck3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ck3save = { path="../ck3save" }
clap = { version = "4.3.0", features = ["derive"] }
diesel = { version = "2.0.4", features = ["sqlite", "numeric"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
serde_yaml = "0.9.21"
